# pdm-copier-template

./: .gitignore  copier.yaml
{{project_name}}/: README.md  pyproject.toml
{{project_name}}/src/{{module_name}}/: _{{module_name}}.py
